@@ -1,3 +1,4 @@
+libdpkg-dev
 dpkg
 dpkg-dev
 dselect
