@@ -1,0 +1,5 @@
+AUTHORS
+THANKS
+debian/usertags
+doc/README.api
+doc/README.feature-removal-schedule
