@@ -1,0 +1,3 @@
+usr/include/dpkg/*.h
+usr/lib/pkgconfig/libdpkg.pc
+usr/lib/libdpkg.a
