@@ -1,0 +1,2 @@
+libdpkg-dev: redundant-origin-field
+libdpkg-dev: redundant-bugs-field
