@@ -1,1 +1,2 @@
 trigdeferred.c
+libdpkg.pc
