@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+pkglibdir=@pkglibdir@
+
+Name: libdpkg
+Description: Debian package management system library
+Version: @VERSION@
+Libs: -L${libdir} -ldpkg
+Libs.private: @ZLIB_LIBS@ @BZ2_LIBS@
+Cflags: -I${includedir}
