@@ -128,6 +128,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     and zlib for dpkg-deb and and libselinux for dpkg on GNU/Linux.
   * Mark the libdpkg.a API as volatile and require any possible users to set
     LIBDPKG_VOLATILE_API to acknowledge that fact.
+  * Add a new libdpkg-dev package with the headers and the static library,
+    although its API should be considered volatile.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
